# MathModel

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: test.yml
mathmodel/: __main__.py  generate_math_data.py  lr_scheduler.py  model_trainer.py
tests/: README.md  conftest.py  test_generate_math_data.py  test_lr_scheduler.py  test_main.py  test_model_trainer.py
